@@ -361,7 +361,7 @@ beginning of the song, ',' to rewind, '.' to fast forward, and 'q' to quit.
 Type 'h' for a full list of available controls.
 .TP
 \fB\-\^\-title
-In an xterm, or rxvt (compatible, TERM environment variable is examined), change the window's title to the name of song currently
+In an xterm, rxvt, screen, iris-ansi (compatible, TERM environment variable is examined), change the window's title to the name of song currently
 playing.
 .TP
 \fB\-\^\-long\-tag
